# auto-mailing-backend

./: .env.dist  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0789d9be6de7_.py  3c8ad50aaf2c_.py  551258acd423_.py  635fb0ad4c12_.py  9c089957f121_.py  ae5b20d3c598_.py  bb876e4a2dcd_.py  e8cbcc5a05ec_.py
src/auto_mailing_backend/: loader.py
src/auto_mailing_backend/config/: settings.py
src/auto_mailing_backend/domain/models/: __init__.py  _enums.py  _models.py
src/auto_mailing_backend/infrastructure/: db.py  logging.py
src/auto_mailing_backend/router/: __init__.py
src/auto_mailing_backend/router/users/: router.py  utils.py
src/auto_mailing_backend/router/users/dto/: parameters.py  responses.py
src/auto_mailing_backend/router/users/flow/: __init__.py  _flow.py
src/auto_mailing_backend/router/users/flow/dto/: parameters.py  responses.py
src/auto_mailing_backend/services/db/: __init__.py
src/auto_mailing_backend/services/db/dto/: __init__.py
src/auto_mailing_backend/services/db/dto/parameters/: users.py
src/auto_mailing_backend/services/db/dto/response/: users.py
src/auto_mailing_backend/services/db/queries/: users.py
src/auto_mailing_backend/services/dependencies/: auth.py  utils.py
src/auto_mailing_backend/services/dependencies/dto/: responses.py
src/auto_mailing_backend/services/dependencies/flow/: __init__.py  _flow.py
src/auto_mailing_backend/services/dependencies/flow/dto/: parameters.py  responses.py
src/auto_mailing_backend/utils/: dto.py  session.py
